Fixed some sonarlint